Issue #1358 fix: Side menu inside content preview has overflowing text

--- a/player/public/styles/style.css
+++ b/player/public/styles/style.css
@@ -310,22 +310,22 @@ body {
 }
 
 .gc-menu-title-cont p {
-    position: absolute;
-    color: #FFFFFF;
-    line-height: 1.2em;
+    position: relative;
+    color: #FFFFFF ;
     text-align: center;
     font-size: 2.8vw;
     width: 100%;
-    text-overflow: ellipsis;
     overflow: hidden;
     word-break: break-word;
-    padding: 2% 5%;
-    margin-top: 10%;
-    -webkit-line-clamp: 3;
+    padding: 2vh 2vw;
+    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     display: -webkit-box;
-    height: 20%;
-    line-height: 1.3em;
+    line-height: 1.6em;
+    float: left;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .gc-menu-btn {
